chore: 修复Sonar问题