@@ -9,12 +9,14 @@ import io.swagger.v3.oas.annotations.Operation;
 import io.swagger.v3.oas.annotations.tags.Tag;
 import lombok.RequiredArgsConstructor;
 import org.springframework.http.ResponseEntity;
-import org.springframework.web.bind.annotation.*;
+import org.springframework.web.bind.annotation.GetMapping;
+import org.springframework.web.bind.annotation.PathVariable;
+import org.springframework.web.bind.annotation.RequestMapping;
+import org.springframework.web.bind.annotation.RestController;
 
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 /**
  * 交易所控制器
@@ -48,7 +50,7 @@ public class ExchangeController {
             map.put("tradingStart", e.getTradingStart());
             map.put("tradingEnd", e.getTradingEnd());
             return map;
-        }).collect(Collectors.toList());
+        }).toList();
         return ResponseEntity.ok(GlobalExceptionHandler.ApiResult.success(result));
     }
     
